@@ -1,3 +1,7 @@
+2005-01-13  Michael Snyder  <msnyder@redhat.com>
+
+	* cli/cli-interp.c: Tweak comments, per coding standard.
+
 2005-01-13  Andrew Cagney  <cagney@gnu.org>
 
 	* breakpoint.c (gdb_breakpoint_query): Update, use
